[package]
name = "actixweb-surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["deref"] }
json = "0.12.4"
serde = { version = "1.0.210", features = ["derive"] }
surrealdb = "2.0.4"
uuid = "1.11.0"
validator = { version = "0.18.1", features = ["derive"] }
